freeimage.nim


proc FreeImage_ConvertLine1To4*(target: ptr BYTE; source: ptr BYTE; 
                                width_in_pixels: cint) {.
    importc: "FreeImage_ConvertLine1To4", dynlib: FreeImageLib.}
proc FreeImage_ConvertLine8To4*(target: ptr BYTE; source: ptr BYTE; 
                                width_in_pixels: cint; palette: ptr RGBQUAD) {.
    importc: "FreeImage_ConvertLine8To4", dynlib: FreeImageLib.}
proc FreeImage_ConvertLine16To4_555*(target: ptr BYTE; source: ptr BYTE; 
                                     width_in_pixels: cint) {.
    importc: "FreeImage_ConvertLine16To4_555", dynlib: FreeImageLib.}
proc FreeImage_ConvertLine16To4_565*(target: ptr BYTE; source: ptr BYTE; 
                                     width_in_pixels: cint) {.
    importc: "FreeImage_ConvertLine16To4_565", dynlib: FreeImageLib.}
proc FreeImage_ConvertLine24To4*(target: ptr BYTE; source: ptr BYTE; 
                                 width_in_pixels: cint) {.
    importc: "FreeImage_ConvertLine24To4", dynlib: FreeImageLib.}
proc FreeImage_ConvertLine32To4*(target: ptr BYTE; source: ptr BYTE; 
                                 width_in_pixels: cint) {.
    importc: "FreeImage_ConvertLine32To4", dynlib: FreeImageLib.}
proc FreeImage_ConvertLine1To8*(target: ptr BYTE; source: ptr BYTE; 
                                width_in_pixels: cint) {.
    importc: "FreeImage_ConvertLine1To8", dynlib: FreeImageLib.}
proc FreeImage_ConvertLine4To8*(target: ptr BYTE; source: ptr BYTE; 
                                width_in_pixels: cint) {.
    importc: "FreeImage_ConvertLine4To8", dynlib: FreeImageLib.}
proc FreeImage_ConvertLine16To8_555*(target: ptr BYTE; source: ptr BYTE; 
                                     width_in_pixels: cint) {.
    importc: "FreeImage_ConvertLine16To8_555", dynlib: FreeImageLib.}
proc FreeImage_ConvertLine16To8_565*(target: ptr BYTE; source: ptr BYTE; 
                                     width_in_pixels: cint) {.
    importc: "FreeImage_ConvertLine16To8_565", dynlib: FreeImageLib.}
proc FreeImage_ConvertLine24To8*(target: ptr BYTE; source: ptr BYTE; 
                                 width_in_pixels: cint) {.
    importc: "FreeImage_ConvertLine24To8", dynlib: FreeImageLib.}
proc FreeImage_ConvertLine32To8*(target: ptr BYTE; source: ptr BYTE; 
                                 width_in_pixels: cint) {.
    importc: "FreeImage_ConvertLine32To8", dynlib: FreeImageLib.}
proc FreeImage_ConvertLine1To16_555*(target: ptr BYTE; source: ptr BYTE; 
                                     width_in_pixels: cint; palette: ptr RGBQUAD) {.
    importc: "FreeImage_ConvertLine1To16_555", dynlib: FreeImageLib.}
proc FreeImage_ConvertLine4To16_555*(target: ptr BYTE; source: ptr BYTE; 
                                     width_in_pixels: cint; palette: ptr RGBQUAD) {.
    importc: "FreeImage_ConvertLine4To16_555", dynlib: FreeImageLib.}
proc FreeImage_ConvertLine8To16_555*(target: ptr BYTE; source: ptr BYTE; 
                                     width_in_pixels: cint; palette: ptr RGBQUAD) {.
    importc: "FreeImage_ConvertLine8To16_555", dynlib: FreeImageLib.}
proc FreeImage_ConvertLine16_565_To16_555*(target: ptr BYTE; source: ptr BYTE; 
    width_in_pixels: cint) {.importc: "FreeImage_ConvertLine16_565_To16_555", 
                             dynlib: FreeImageLib.}
proc FreeImage_ConvertLine24To16_555*(target: ptr BYTE; source: ptr BYTE; 
                                      width_in_pixels: cint) {.
    importc: "FreeImage_ConvertLine24To16_555", dynlib: FreeImageLib.}
proc FreeImage_ConvertLine32To16_555*(target: ptr BYTE; source: ptr BYTE; 
                                      width_in_pixels: cint) {.
    importc: "FreeImage_ConvertLine32To16_555", dynlib: FreeImageLib.}
proc FreeImage_ConvertLine1To16_565*(target: ptr BYTE; source: ptr BYTE; 
                                     width_in_pixels: cint; palette: ptr RGBQUAD) {.
    importc: "FreeImage_ConvertLine1To16_565", dynlib: FreeImageLib.}
proc FreeImage_ConvertLine4To16_565*(target: ptr BYTE; source: ptr BYTE; 
                                     width_in_pixels: cint; palette: ptr RGBQUAD) {.
    importc: "FreeImage_ConvertLine4To16_565", dynlib: FreeImageLib.}
proc FreeImage_ConvertLine8To16_565*(target: ptr BYTE; source: ptr BYTE; 
                                     width_in_pixels: cint; palette: ptr RGBQUAD) {.
    importc: "FreeImage_ConvertLine8To16_565", dynlib: FreeImageLib.}
proc FreeImage_ConvertLine16_555_To16_565*(target: ptr BYTE; source: ptr BYTE; 
    width_in_pixels: cint) {.importc: "FreeImage_ConvertLine16_555_To16_565", 
                             dynlib: FreeImageLib.}
proc FreeImage_ConvertLine24To16_565*(target: ptr BYTE; source: ptr BYTE; 
                                      width_in_pixels: cint) {.
    importc: "FreeImage_ConvertLine24To16_565", dynlib: FreeImageLib.}
proc FreeImage_ConvertLine32To16_565*(target: ptr BYTE; source: ptr BYTE; 
                                      width_in_pixels: cint) {.
    importc: "FreeImage_ConvertLine32To16_565", dynlib: FreeImageLib.}
proc FreeImage_ConvertLine1To24*(target: ptr BYTE; source: ptr BYTE; 
                                 width_in_pixels: cint; palette: ptr RGBQUAD) {.
    importc: "FreeImage_ConvertLine1To24", dynlib: FreeImageLib.}
proc FreeImage_ConvertLine4To24*(target: ptr BYTE; source: ptr BYTE; 
                                 width_in_pixels: cint; palette: ptr RGBQUAD) {.
    importc: "FreeImage_ConvertLine4To24", dynlib: FreeImageLib.}
proc FreeImage_ConvertLine8To24*(target: ptr BYTE; source: ptr BYTE; 
                                 width_in_pixels: cint; palette: ptr RGBQUAD) {.
    importc: "FreeImage_ConvertLine8To24", dynlib: FreeImageLib.}
proc FreeImage_ConvertLine16To24_555*(target: ptr BYTE; source: ptr BYTE; 
                                      width_in_pixels: cint) {.
    importc: "FreeImage_ConvertLine16To24_555", dynlib: FreeImageLib.}
proc FreeImage_ConvertLine16To24_565*(target: ptr BYTE; source: ptr BYTE; 
                                      width_in_pixels: cint) {.
    importc: "FreeImage_ConvertLine16To24_565", dynlib: FreeImageLib.}
proc FreeImage_ConvertLine32To24*(target: ptr BYTE; source: ptr BYTE; 
                                  width_in_pixels: cint) {.
    importc: "FreeImage_ConvertLine32To24", dynlib: FreeImageLib.}
proc FreeImage_ConvertLine1To32*(target: ptr BYTE; source: ptr BYTE; 
                                 width_in_pixels: cint; palette: ptr RGBQUAD) {.
    importc: "FreeImage_ConvertLine1To32", dynlib: FreeImageLib.}
proc FreeImage_ConvertLine4To32*(target: ptr BYTE; source: ptr BYTE; 
                                 width_in_pixels: cint; palette: ptr RGBQUAD) {.
    importc: "FreeImage_ConvertLine4To32", dynlib: FreeImageLib.}
proc FreeImage_ConvertLine8To32*(target: ptr BYTE; source: ptr BYTE; 
                                 width_in_pixels: cint; palette: ptr RGBQUAD) {.
    importc: "FreeImage_ConvertLine8To32", dynlib: FreeImageLib.}
proc FreeImage_ConvertLine16To32_555*(target: ptr BYTE; source: ptr BYTE; 
                                      width_in_pixels: cint) {.
    importc: "FreeImage_ConvertLine16To32_555", dynlib: FreeImageLib.}
proc FreeImage_ConvertLine16To32_565*(target: ptr BYTE; source: ptr BYTE; 
                                      width_in_pixels: cint) {.
    importc: "FreeImage_ConvertLine16To32_565", dynlib: FreeImageLib.}
proc FreeImage_ConvertLine24To32*(target: ptr BYTE; source: ptr BYTE; 
                                  width_in_pixels: cint) {.
    importc: "FreeImage_ConvertLine24To32", dynlib: FreeImageLib.}
# Smart conversion routines ------------------------------------------------

proc FreeImage_ConvertTo4Bits*(dib: ptr FIBITMAP): ptr FIBITMAP {.
    importc: "FreeImage_ConvertTo4Bits", dynlib: FreeImageLib.}
proc FreeImage_ConvertTo8Bits*(dib: ptr FIBITMAP): ptr FIBITMAP {.
    importc: "FreeImage_ConvertTo8Bits", dynlib: FreeImageLib.}
proc FreeImage_ConvertToGreyscale*(dib: ptr FIBITMAP): ptr FIBITMAP {.
    importc: "FreeImage_ConvertToGreyscale", dynlib: FreeImageLib.}
proc FreeImage_ConvertTo16Bits555*(dib: ptr FIBITMAP): ptr FIBITMAP {.
    importc: "FreeImage_ConvertTo16Bits555", dynlib: FreeImageLib.}
proc FreeImage_ConvertTo16Bits565*(dib: ptr FIBITMAP): ptr FIBITMAP {.
    importc: "FreeImage_ConvertTo16Bits565", dynlib: FreeImageLib.}
proc FreeImage_ConvertTo24Bits*(dib: ptr FIBITMAP): ptr FIBITMAP {.
    importc: "FreeImage_ConvertTo24Bits", dynlib: FreeImageLib.}
proc FreeImage_ConvertTo32Bits*(dib: ptr FIBITMAP): ptr FIBITMAP {.
    importc: "FreeImage_ConvertTo32Bits", dynlib: FreeImageLib.}
proc FreeImage_ColorQuantize*(dib: ptr FIBITMAP; quantize: FREE_IMAGE_QUANTIZE): ptr FIBITMAP {.
    importc: "FreeImage_ColorQuantize", dynlib: FreeImageLib.}
proc FreeImage_ColorQuantizeEx*(dib: ptr FIBITMAP; 
                                quantize: FREE_IMAGE_QUANTIZE; 
                                PaletteSize: cint; ReserveSize: cint; 
                                ReservePalette: ptr RGBQUAD): ptr FIBITMAP {.
    importc: "FreeImage_ColorQuantizeEx", dynlib: FreeImageLib.}
proc FreeImage_Threshold*(dib: ptr FIBITMAP; T: BYTE): ptr FIBITMAP {.
    importc: "FreeImage_Threshold", dynlib: FreeImageLib.}
proc FreeImage_Dither*(dib: ptr FIBITMAP; algorithm: eFREE_IMAGE_DITHER): ptr FIBITMAP {.
    importc: "FreeImage_Dither", dynlib: FreeImageLib.}
proc FreeImage_ConvertFromRawBits*(bits: ptr BYTE; width: cint; height: cint; 
                                   pitch: cint; bpp: cuint; red_mask: cuint; 
                                   green_mask: cuint; blue_mask: cuint; 
                                   topdown: BOOL): ptr FIBITMAP {.
    importc: "FreeImage_ConvertFromRawBits", dynlib: FreeImageLib.}
proc FreeImage_ConvertToRawBits*(bits: ptr BYTE; dib: ptr FIBITMAP; pitch: cint; 
                                 bpp: cuint; red_mask: cuint; green_mask: cuint; 
                                 blue_mask: cuint; topdown: BOOL) {.
    importc: "FreeImage_ConvertToRawBits", dynlib: FreeImageLib.}
proc FreeImage_ConvertToFloat*(dib: ptr FIBITMAP): ptr FIBITMAP {.
    importc: "FreeImage_ConvertToFloat", dynlib: FreeImageLib.}
proc FreeImage_ConvertToRGBF*(dib: ptr FIBITMAP): ptr FIBITMAP {.
    importc: "FreeImage_ConvertToRGBF", dynlib: FreeImageLib.}
proc FreeImage_ConvertToUINT16*(dib: ptr FIBITMAP): ptr FIBITMAP {.
    importc: "FreeImage_ConvertToUINT16", dynlib: FreeImageLib.}
proc FreeImage_ConvertToRGB16*(dib: ptr FIBITMAP): ptr FIBITMAP {.
    importc: "FreeImage_ConvertToRGB16", dynlib: FreeImageLib.}
proc FreeImage_ConvertToStandardType*(src: ptr FIBITMAP; scale_linear: BOOL): ptr FIBITMAP {.
    importc: "FreeImage_ConvertToStandardType", dynlib: FreeImageLib.}
proc FreeImage_ConvertToType*(src: ptr FIBITMAP; dst_type: FREE_IMAGE_TYPE; 
                              scale_linear: BOOL): ptr FIBITMAP {.
    importc: "FreeImage_ConvertToType", dynlib: FreeImageLib.}
# tone mapping operators
